# eip-8038-repricing

./: .gitignore  CLAUDE.md  Makefile  README.md  fetch.yaml  fit.yaml  pyproject.toml
data/gasfit/: glue_opcodes_autogenerated_report.md  meta.json  new_gas.csv  new_gas_all_params.csv  new_gas_proposal.md  results.csv
data/raw/: meta.json  opcounts.json
data/runs/20260522T235541Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260529T234448Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260601T102015Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260601T140944Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260601T234532Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260601T234709Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260602T083208Z_3182dda7b93dee61/: fit.yaml  raw_meta.json
data/runs/20260602T121939Z_3182dda7b93dee61/: raw_meta.json
data/runs/20260603T071511Z_3182dda7b93dee61/: raw_meta.json
docs/: glue.html  goal_COLD_ACCOUNT_CODE_ACCESS.html  goal_COLD_ACCOUNT_CODE_WRITE.html  goal_COLD_ACCOUNT_NOCODE_ACCESS.html  goal_COLD_ACCOUNT_NOCODE_WRITE.html  goal_COLD_STORAGE_ACCESS.html  goal_COLD_STORAGE_WRITE.html  goal_WARM_ACCESS.html  goals.html  index.html  methodology.html  new-gas.html  run_selector.js  runtime.html  style.css  trends.html  trends.js
scripts/: archive_run.py  build_site.py  clean_run.py
site_src/assets/: runtime_filter.js  style.css  trends.js
site_src/templates/: base.html  glue.html  goal_detail.html  goals.html  index.html  methodology.html  new_gas.html  runtime.html  trends.html
(+195 files in other folders)
