[project]
name = "eip-8038-repricing"
version = "0.1.0"
description = "Static site summarising the EIP-8038 gas-repricing analysis"
requires-python = ">=3.11"
dependencies = [
    "benchmarkoor-fetch>=0.2.0",
    "evm-gasfit>=0.0.3",
    "jinja2>=3.1",
    "pandas>=2.0",
    "markdown>=3.4",
    "pyyaml>=6.0",
]

[tool.setuptools]
# This project is a pipeline + site builder, not an importable package.
py-modules = []
